--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
     <body>
         <header>
                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="{% url 'home'%}" Style="color:#e75480;font-weight:bold;padding:5px;border-radius:20px;border:2px dashed #e75480;"> Breast Cancer Predictor </a>
+  <a class="navbar-brand" href="{% url 'home'%}" Style="color:white;background-color:#e75480;font-weight:bold;padding:5px;border-radius:20px;border:2px solid #e75480;"> Breast Cancer Predictor </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
