--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
       </li>
     </ul>
     <span class="navbar-text">
-      Let's Fight together against Breast Cancer
+      Fight against Breast Cancer
     </span>
   </div>
 </nav>
