--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
       </li>
     </ul>
     <span class="navbar-text">
-      Fight against Breast Cancer
+      <span style="color:#e75480">F</span>ight <span style="color:#e75480">A</span>gainst <span style="color:#e75480">B</span>reast <span style="color:#e75480">C</span>ancer
     </span>
   </div>
 </nav>
